# oasg

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml  theory.md
docs/: architecture.md  publication_audit.md  quick_mental_model.md
schemas/: abstract_action_class.schema.json  abstract_trace_receipt.schema.json  active_mutation_record.schema.json  active_promotion_receipt.schema.json  boundary_certificate.schema.json  candidate_path_record.schema.json  comparison_contract.schema.json  coverage_certificate.schema.json  dominance_gate_receipt.schema.json  effect_counts.schema.json  event_record.schema.json  harness_receipt.schema.json  klb_receipt.schema.json  lease_receipt.schema.json  ledger_append_receipt.schema.json  ledger_integrity_receipt.schema.json  library_conflict_receipt.schema.json  library_history_receipt.schema.json  mutation_batch.schema.json  mutation_outcome_record.schema.json  mutation_patch.schema.json  mutation_proposal.schema.json  mutation_record.schema.json  mutator_profile.schema.json  obligation_record.schema.json  optimizer_run_receipt.schema.json  optimizer_state.schema.json  pending_trial.schema.json  phase_receipt.schema.json  policy_diff.schema.json  policy_profile.schema.json  positive_evidence_witness.schema.json  pressure_vector.schema.json  proof_obligation_receipt.schema.json  protected_debt_record.schema.json  quarantine_record.schema.json  quarantined_library_entry.schema.json  reducer_snapshot.schema.json  rejection_record.schema.json  resource_usage.schema.json  (+19 more)
tests/: test_adapters.py  test_canonical.py  (+14 more)
(+199 files in other folders)
