[project]
name = "oasg"
version = "1.1.0"
description = "Observable-only Autonomic Slack Gradient reference implementation."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [{ name = "K. Takahashi" }]
keywords = [
  "ai-agents",
  "agent-workflows",
  "observable-ledger",
  "self-improvement",
  "verification",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.7",
  "rich>=13.7",
  "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/kadubon/oasg"
Documentation = "https://github.com/kadubon/oasg#readme"
Issues = "https://github.com/kadubon/oasg/issues"

[project.scripts]
oasg = "oasg.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
